Main menu polishing. Uses <Action name="dummy_separator"/> as a replacement for separators that get deleted while merging menu  using <DefineGroup>.

--- a/parts/astyle/kdevpart_astyle.rc
+++ b/parts/astyle/kdevpart_astyle.rc
@@ -1,8 +1,8 @@
 <!DOCTYPE kpartgui>
 <kpartplugin name="KDevAStyle" library="libkdevastyle" version="2">
 <MenuBar>
- <Menu name="tools"><Text>&amp;Edit</Text>
-  <Action name="edit_astyle"/>
+ <Menu name="edit">
+  <Action name="edit_astyle" group="edit_astyle"/>
  </Menu>
 </MenuBar>
 </kpartplugin>
