--- a/parts/diff/kdevdiff.rc
+++ b/parts/diff/kdevdiff.rc
@@ -2,7 +2,7 @@
 <kpartgui name="KDevDiff" version="1">
 <MenuBar>
   <Menu name="tools" >
-    <Action name="tools_diff"/>
+    <Action name="tools_diff" group="tools_file_operations"/>
   </Menu>
 </MenuBar>
 </kpartgui>
