--- a/parts/replace/kdevpart_replace.rc
+++ b/parts/replace/kdevpart_replace.rc
@@ -2,7 +2,7 @@
 <kpartplugin name="replace" library="libreplaceplugin" version="1">
 <MenuBar>
  <Menu name="edit">
-  <Action name="edit_replace_across"/>
+  <Action name="edit_replace_across" group="kdev_edit_find_merge"/>
  </Menu>
 </MenuBar>
 </kpartplugin>
