--- a/parts/distpart/kdevpart_distpart.rc
+++ b/parts/distpart/kdevpart_distpart.rc
@@ -2,7 +2,7 @@
 <kpartplugin name="distpart" library="libdistpartplugin" version="1">
 <MenuBar>
  <Menu name="tools"><Text>&amp;Tools</Text>
-  <Action name="make_dist"/>
+  <Action name="make_dist" group="tools_project_operations"/>
  </Menu>
 </MenuBar>
 <ToolBar name="toolsToolBar"><text>Tools Toolbar</text>
