--- a/parts/grepview/kdevgrepview.rc
+++ b/parts/grepview/kdevgrepview.rc
@@ -2,7 +2,7 @@
 <kpartgui name="KDevGrepView" version="1">
 <MenuBar>
  <Menu name="edit">
-  <Action name="edit_grep"/>
+  <Action name="edit_grep" group="kdev_edit_find_merge"/>
  </Menu>
 </MenuBar>
 </kpartgui>
