--- a/parts/abbrev/kdevabbrev.desktop
+++ b/parts/abbrev/kdevabbrev.desktop
@@ -3,10 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Abbrevation Expansion
-Comment[fr]=Un module externe pour la gestion de l'extension des abréviations.
+Comment[fr]=Un module externe pour la gestion de la complétion automatique du code source.
 Name=KDevAbbrev
 GenericName=Abbrevation Expansion
-GenericName[fr]=Extension des abréviations
+GenericName[fr]=Complétion automatique
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevabbrev
 X-KDevelop-Scope=Global
