--- a/parts/javasupport/Makefile.am
+++ b/parts/javasupport/Makefile.am
@@ -5,13 +5,16 @@ KDE_CXXFLAGS = $(USE_EXCEPTIONS)
 # SUBDIRS = templates subclassing_template newclass_templates
 
 
-INCLUDES = -I$(top_srcdir)/lib/antlr                 -I$(top_srcdir)/lib/interfaces                 -I$(top_srcdir)/lib/sourceinfo                 -I$(top_srcdir)/lib/util                 -I$(top_srcdir)/lib/catalog 		-I$(top_srcdir)/lib/compat                 $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/antlr -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util -I$(top_srcdir)/lib/catalog -I$(top_srcdir)/lib/compat $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevjavasupport.la
-libkdevjavasupport_la_LDFLAGS = $(LEXLIB) $(all_libraries) $(KDE_PLUGIN)
-libkdevjavasupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la                                 $(top_builddir)/lib/antlr/src/libantlr.la                                 $(top_builddir)/lib/catalog/libkdevcatalog.la
+libkdevjavasupport_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
+libkdevjavasupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/antlr/src/libantlr.la $(top_builddir)/lib/catalog/libkdevcatalog.la
 
-libkdevjavasupport_la_SOURCES = javasupportpart.cpp ccconfigwidget.cpp ccconfigwidgetbase.ui javanewclassdlgbase.ui javanewclassdlg.cpp problemreporter.cpp configproblemreporter.ui backgroundparser.cpp subclassingdlg.cpp subclassingdlgbase.ui addmethoddialogbase.ui addmethoddialog.cpp addattributedialogbase.ui addattributedialog.cpp KDevJavaSupportIface.cpp KDevJavaSupportIface.skel classgeneratorconfigbase.ui classgeneratorconfig.cpp javasupportfactory.cpp codeinformationrepository.cpp doxydoc.cpp JavaLexer.cpp JavaRecognizer.cpp JavaStoreWalker.cpp driver.cpp
+libkdevjavasupport_la_SOURCES = JavaLexer.cpp KDevJavaSupportIface.cpp javasupportfactory.cpp \
+JavaRecognizer.cpp backgroundparser.cpp configproblemreporter.cpp  javasupportpart.cpp \
+JavaStoreWalker.cpp javasupport_utils.cpp problemreporter.cpp driver.cpp kdevdriver.cpp KDevJavaSupportIface.skel
+
 
 EXTRA_DIST = java.g java.tree.g java.store.g
 
