--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -33,6 +33,6 @@ SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
     manager fileselector visualboyadvance tipofday abbrev filter \
     uimode editor-chooser openwith history filecreate \
     texttools javadebugger replace closer \
-    pascalproject pascalsupport pythonsupport rubysupport bashsupport fortransupport phpsupport \
+    pascalproject pascalsupport pythonsupport rubysupport bashsupport fortransupport phpsupport javasupport \
     partexplorer bookmarks fullscreen $(QEDITOR_SUBDIR) $(SVN_SUBDIR) $(SCRIPTING_SUBDIR) $(CVSSERVICE_SUBDIR)
 
