* Added a file filter (straight from kdevfileselector) * Solved an insidious crash involving a QPtrList<QListViewItem> where the pointers already in the list where invalid when the list view was updated :-/

--- a/parts/fileview/Makefile.am
+++ b/parts/fileview/Makefile.am
@@ -10,7 +10,7 @@ libkdevfileview_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 libkdevfilegroups_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfilegroups_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevfileview_la_SOURCES = fileviewpart.cpp filetreewidget.cpp
+libkdevfileview_la_SOURCES = fileviewpart.cpp filetreewidget.cpp partwidget.cpp
                              
 libkdevfilegroups_la_SOURCES = filegroupswidget.cpp addfilegroupdlg.cpp filegroupsconfigwidget.cpp filegroupsconfigwidgetbase.ui filegroupspart.cpp
 
