syncronized with latest kdelibs/kdmi

--- a/lib/qextmdi/include/Makefile.am
+++ b/lib/qextmdi/include/Makefile.am
@@ -1,1 +1,3 @@
-noinst_HEADERS = kmdichildarea.h kmdichildfrm.h kmdichildfrmcaption.h kmdidefines.h kmdiiterator.h kmdilistiterator.h            kmdimainfrm.h kmdinulliterator.h kmditaskbar.h kmdichildview.h
+noinst_HEADERS = kmdichildarea.h kmdichildfrm.h kmdichildfrmcaption.h kmdidefines.h kmdiiterator.h kmdilistiterator.h \
+                 kmdimainfrm.h kmdinulliterator.h kmditaskbar.h kmdichildview.h \
+		 kmditoolviewaccessor.h kmditoolviewaccessor_p.h
