- new user IDEAl II mode. It uses KMultiTabBar now :)   It provides (more or less) the same look and feel of the KMDI+IDEAl - less annoying toolbars

--- a/lib/widgets/Makefile.am
+++ b/lib/widgets/Makefile.am
@@ -1,7 +1,7 @@
-INCLUDES = $(all_includes) -I$(top_srcdir)/lib/compat
-
+INCLUDES = $(all_includes) -I$(top_srcdir)/lib/compat $(KDEVMDI_INCLUDES)
 METASOURCES = AUTO
 
 noinst_LTLIBRARIES = libwidgets.la
 
-libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp
+libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoomframe.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp
+
