--- a/parts/tools/kdevpart_tools.rc
+++ b/parts/tools/kdevpart_tools.rc
@@ -7,7 +7,7 @@
     <ActionList name="tools2_list"/>
   </Menu>
 </MenuBar>
-<ToolBar position="Top" iconText="IconOnly" noMerge="1" name="toolsToolBar" fullWidth="false" hidden="true" >
+<ToolBar position="Top" iconText="IconOnly" noMerge="1" name="extraToolBar" fullWidth="false" hidden="true" >
   <text>Tools Toolbar</text>
   <ActionList name="tools_list"/>
 </ToolBar>
