--- a/parts/classview/kdevclassview.rc
+++ b/parts/classview/kdevclassview.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevClassView" version="3" newline="true">
+<kpartgui name="KDevClassView" version="4">
 <ToolBar name="browserToolBar">
   <text>Browser Toolbar</text>
   <Action name="namespaces_combo" />
