--- a/parts/debugger/kdevdebugger.rc
+++ b/parts/debugger/kdevdebugger.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevDebugger" version="6">
+<kpartgui name="KDevDebugger" version="7">
 <MenuBar>
  <Menu name="debug">
   <text>&amp;Debug</text>
@@ -22,7 +22,7 @@
   <Action name="debug_attach"/>
  </Menu>
 </MenuBar>
-<ToolBar name="Debug Toolbar">
+<ToolBar name="browserToolBar" fullWidth="false" newline="false">
   <Action name="debug_run"/>
   <Action name="debug_stepover"/>
   <Action name="debug_stepinto"/>
