--- a/parts/phpsupport/kdevphpsupport.rc
+++ b/parts/phpsupport/kdevphpsupport.rc
@@ -8,8 +8,8 @@
     <Action name="project_new_class" />
   </Menu>
 </MenuBar>
-<ToolBar name="buildToolBar">
-    <Action name="build_execute" />
+<ToolBar name="mainToolBar">
+    <Action name="build_execute" group="build_operations" />
 </ToolBar>
 </kpartgui>
 
