--- a/parts/sqlsupport/kdevsqlsupport.rc
+++ b/parts/sqlsupport/kdevsqlsupport.rc
@@ -5,8 +5,8 @@
     <Action name="build_execute" />
   </Menu>
 </MenuBar>
-<ToolBar name="buildToolBar">
-    <Action name="build_execute" />
+<ToolBar name="mainToolBar">
+    <Action name="build_execute" group="build_operations" />
 </ToolBar>
 <ToolBar name="browserToolBar">
     <Action name="connection_combo" />
