--- a/parts/trollproject/kdevtrollproject.rc
+++ b/parts/trollproject/kdevtrollproject.rc
@@ -14,15 +14,15 @@
     <Action name="build_clean_target" />
   </Menu>
 </MenuBar>
-<ToolBar name="buildToolBar">
-    <Action name="build_compilefile" />
-    <Action name="build_build_target" />
-    <Action name="build_rebuild_target" />
-    <Action name="build_execute_target" />
+<ToolBar name="mainToolBar">
+    <Action name="build_compilefile" group="build_operations" />
+    <Action name="build_build_target" group="build_operations" />
+    <Action name="build_rebuild_target" group="build_operations" />
+    <Action name="build_execute_target" group="build_operations" />
     <Separator/>
-    <Action name="build_build_project" />
-    <Action name="build_rebuild_project" />
-    <Action name="build_execute_project" />
-    <Action name="build_clean_project" />
+    <Action name="build_build_project" group="build_operations" />
+    <Action name="build_rebuild_project" group="build_operations" />
+    <Action name="build_execute_project" group="build_operations" />
+    <Action name="build_clean_project" group="build_operations" />
 </ToolBar>
 </kpartgui>
