--- a/parts/visualboyadvance/kdevpart_visualboyadvance.rc
+++ b/parts/visualboyadvance/kdevpart_visualboyadvance.rc
@@ -5,7 +5,7 @@
     <Action name="build_execute" />
   </Menu>
 </MenuBar>
-<ToolBar name="buildToolBar">
-    <Action name="build_execute" />
+<ToolBar name="mainToolBar">
+    <Action name="build_execute" group="build_operations"/>
 </ToolBar>
 </kpartplugin>
