Put the appwizard, tip-of-the-day and fullscreen plugins in Core scope, as they make very little sense as user-selectable plugins.

--- a/parts/tipofday/kdevpart_tipofday.desktop
+++ b/parts/tipofday/kdevpart_tipofday.desktop
@@ -3,11 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Tip of the Day
-Comment[fr]=Un module externe pour la gestion des astuces du jour.
+Comment[hu]=A nap tippje
+Comment[pt_BR]=Dica do Dia
+Comment[sv]=Dagens tips
+Comment[xx]=xxTip of the Dayxx
 Name=KDevTipOfDay
+Name[sv]=KDevelop dagens tips
+Name[xx]=xxKDevTipOfDayxx
 GenericName=Tip of the Day
-GenericName[fr]=Astuces du jour
+GenericName[hu]=a nap tippje
+GenericName[pt_BR]=Dica do Dia
+GenericName[sv]=Dagens tips
+GenericName[xx]=xxTip of the Dayxx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevtipofday
-X-KDevelop-Scope=Global
+X-KDevelop-Scope=Core
