--- a/parts/clearcase/kdevclearcase.desktop
+++ b/parts/clearcase/kdevclearcase.desktop
@@ -2,11 +2,19 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=A plugin that provides support for Rational ClearCase, a large version control and build management system.
-Comment[fr]=Un module externe qui gÈre le programme ´ ClearCase ª de la sociÈtÈ Rational pour la gestion des versions de codes sources (similaire ‡ CVS).
+Comment=A plugin that provides support for Rational ClearCase, a large version control and build management system. http://www.rational.com/products/clearcase/index.jsp
+Comment[hu]=B≈ëv√≠t≈ëmodul a Rational ClearCase-hez (ez egy komplex verzi√≥k√∂vet≈ë rendszer) http://www.rational.com/products/clearcase/index.jsp
+Comment[pt_BR]=Um plugin que fornece suporte para o Rational ClearCase, um sistema de gerenciamento de compila√ß√£o e controle de vers√£o. http://www.rational.com/products/clearcase/index.jsp
+Comment[sv]=Ett insticksprogram som st√∂der Rational ClearCase, ett omfattande versions- och bygghanteringssystem. http://www.rational.com/products/clearcase/index.jsp
+Comment[xx]=xxA plugin that provides support for Rational ClearCase, a large version control and build management system. http://www.rational.com/products/clearcase/index.jspxx
 Name=KDevClearCase
+Name[sv]=KDevelop ClearCase
+Name[xx]=xxKDevClearCasexx
 GenericName=ClearCase Integration
-GenericName[fr]=IntÈgration de ´ ClearCase ª
+GenericName[hu]=ClearCase-integr√°ci√≥
+GenericName[pt_BR]=Integra√ß√£o com o ClearCase
+GenericName[sv]=Integrering av ClearCase
+GenericName[xx]=xxClearCase Integrationxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevclearcase
 X-KDevelop-Scope=Project
