--- a/parts/fileview/kdevfilegroups.desktop
+++ b/parts/fileview/kdevfilegroups.desktop
@@ -2,11 +2,16 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=File Groups
-Comment[fr]=Un module externe pour la gestion des groupes de fichiers.
+Comment=Allows for grouping of project files according to filename patterns.
+Comment[xx]=xxAllows for grouping of project files according to filename patterns.xx
 Name=KDevFileGroups
+Name[sv]=KDevelop filgrupper
+Name[xx]=xxKDevFileGroupsxx
 GenericName=File Groups
-GenericName[fr]=Groupes de fichiers
+GenericName[hu]=fájlcsoportok
+GenericName[pt_BR]=Grupos de Arquivo
+GenericName[sv]=Filgrupper
+GenericName[xx]=xxFile Groupsxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfilegroups
 X-KDevelop-Scope=Project
