--- a/parts/fileview/kdevfileview.desktop
+++ b/parts/fileview/kdevfileview.desktop
@@ -2,11 +2,16 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=File Tree
-Comment[fr]=Un module externe pour la gestion des arborescences de fichiers.
+Comment=Provides a way of navigating and interacting with the source files of the current project.
+Comment[xx]=xxProvides a way of navigating and interacting with the source files of the current project.xx
 Name=KDevFileView
+Name[sv]=KDevelop filvisning
+Name[xx]=xxKDevFileViewxx
 GenericName=File Tree
-GenericName[fr]=Arborescences de fichiers
+GenericName[hu]=fájl-fa
+GenericName[pt_BR]=Árvore de Arquivo
+GenericName[sv]=Filträd
+GenericName[xx]=xxFile Treexx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfileview
 X-KDevelop-Scope=Project
