--- a/parts/filter/kdevfilter.desktop
+++ b/parts/filter/kdevfilter.desktop
@@ -2,11 +2,16 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Shell Filtering and Insertion
-Comment[fr]=Un module externe pour la gestion du filtrage avec le shell et pour l'insertion dans les fichiers.
+Comment=Provides a way of manipulating editor text using commandline tools. Appears in the Tools menu.
+Comment[xx]=xxProvides a way of manipulating text using commandline tools. Appears in the Tools menu.xx
 Name=KDevFilter
+Name[sv]=KDevelop filter
+Name[xx]=xxKDevFilterxx
 GenericName=Shell Filtering and Insertion
-GenericName[fr]=Filtrage et insertion
+GenericName[hu]=szűrés és beszúrás
+GenericName[pt_BR]=Shell de Filtro e Inserção
+GenericName[sv]=Skalfiltrering och infogning
+GenericName[xx]=xxShell Filtering and Insertionxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfilter
 X-KDevelop-Scope=Global
