--- a/parts/perforce/kdevperforce.desktop
+++ b/parts/perforce/kdevperforce.desktop
@@ -2,11 +2,16 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Perforce Integration
-Comment[fr]=Un module externe qui gére le programme « PerForce » pour la gestion des versions de codes sources (similaire à CVS).
+Comment=Integrates Perforce, a software configuration management system. http://www.perforce.com/
+Comment[xx]=xxIntegrates Perforce, a software configuration management system. http://www.perforce.com/xx
 Name=KDevPerforce
+Name[sv]=KDevelop Perforce
+Name[xx]=xxKDevPerforcexx
 GenericName=Perforce Integration
-GenericName[fr]=Intégration de « Perforce »
+GenericName[hu]=Perforce-integrÃ¡ciÃ³
+GenericName[pt_BR]=IntegraÃ§Ã£o com o Perforce
+GenericName[sv]=Integrering av Perforce
+GenericName[xx]=xxPerforce Integrationxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevperforce
 X-KDevelop-Scope=Project
