--- a/parts/regexptest/kdevregexptest.desktop
+++ b/parts/regexptest/kdevregexptest.desktop
@@ -2,11 +2,16 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Regular Expression Tester
-Comment[fr]=Un module externe pour la gestion d'un dÈbogeur d'expressions rÈguliËres.
+Comment=Tool to design and test regular expressions against common regexp syntaxes.
+Comment[xx]=xxTool to design and test regular expressions against common regexp syntaxes.xx
 Name=KDevRegexpTest
+Name[sv]=KDevelop test av regulj√§ra uttryck
+Name[xx]=xxKDevRegexpTestxx
 GenericName=Regular Expression Tester
-GenericName[fr]=DÈbogeur d'expressions rÈguliËres
+GenericName[hu]=regul√°ris kifejez√©sek tesztel√©se
+GenericName[pt_BR]=Testador de Express√£o Regular
+GenericName[sv]=Test av regulj√§ra uttryck
+GenericName[xx]=xxRegular Expression Testerxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevregexptest
 X-KDevelop-Scope=Global
