--- a/parts/cvs/kdevcvs.desktop
+++ b/parts/cvs/kdevcvs.desktop
@@ -2,11 +2,15 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=CVS Integration
-Comment[fr]=Un module externe qui gére le programme « CVS » pour la gestion des versions de codes sources.
+Comment=CVS is a version control system, which allows you to keep old versions of files, keep a log of who, when, and why changes occurred. http://www.cvshome.org/
+Comment[xx]=xxCVS is a version control system, which allows you to keep old versions of files, keep a log of who, when, and why changes occurred. http://www.cvshome.org/xx
 Name=CVS
+Name[xx]=xxCVSxx
 GenericName=CVS Integration
-GenericName[fr]=Intégration de CVS
+GenericName[hu]=CVS-integrÃ¡ciÃ³
+GenericName[pt_BR]=IntegraÃ§Ã£o com o CVS
+GenericName[sv]=Integrering av CVS
+GenericName[xx]=xxCVS Integrationxx
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvs
 X-KDevelop-Scope=Global
