--- a/parts/grepview/kdevgrepview.desktop
+++ b/parts/grepview/kdevgrepview.desktop
@@ -2,11 +2,16 @@
 Encoding=UTF-8
 Type=Service
 Exec=blubb
-Comment=Grep Frontend
-Comment[fr]=Un module externe pour la recherche dans les fichiers d'un projet avec le programme « grep ».
+Comment=Integrates "find|grep" in KDevelop - allows fast searching of multiple files using patterns or regular expressions.
+Comment[xx]=xxIntegrates "find|grep" in KDevelop - allows fast searching of multiple files using patterns or regular expressions.xx
 Name=KDevGrepView
+Name[sv]=KDevelop grep-visning
+Name[xx]=xxKDevGrepViewxx
 GenericName=Grep Frontend
-GenericName[fr]=Recherche dans des fichiers
+GenericName[hu]=grafikus Grep-felÃ¼let
+GenericName[pt_BR]=Frontend do Grep
+GenericName[sv]=GrÃ¤nssnitt till grep
+GenericName[xx]=xxGrep Frontendxx
 Icon=find
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevgrepview
