coolo we don't only support KDE-3.2 but also 3.1 and 3.0

--- a/lib/widgets/Makefile.am
+++ b/lib/widgets/Makefile.am
@@ -5,6 +5,6 @@ noinst_LTLIBRARIES = libwidgets.la
 
 libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoomframe.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp
 # David claims in his How to write good Makefile.am talk that this isn't legal - I still find it useful :)
-libwidgets_la_LIBADD = -lkmdi 
+libwidgets_la_LIBADD = $(LIB_KDEVMDI) 
 libwidgets_la_LDFLAGS = $(all_libraries)
 
