revert roberto's ideal II mode and restore old mode. Reason: too many bugs, not worth fixing since we'll push ideal into KMDI, so we don't need an own implementation. Don't cry for the history of the deleted files, they will be deleted soon anyways.

--- a/lib/widgets/Makefile.am
+++ b/lib/widgets/Makefile.am
@@ -1,10 +1,7 @@
-INCLUDES = $(all_includes) -I$(top_srcdir)/lib/compat $(KDEVMDI_INCLUDES)
+INCLUDES = $(all_includes) -I$(top_srcdir)/lib/compat
+
 METASOURCES = AUTO
 
 noinst_LTLIBRARIES = libwidgets.la
 
-libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoomframe.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp
-# David claims in his How to write good Makefile.am talk that this isn't legal - I still find it useful :)
-libwidgets_la_LIBADD = $(LIB_KDEVMDI) 
-libwidgets_la_LDFLAGS = $(all_libraries)
-
+libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp
