--- a/parts/autoproject/kdevautoproject.rc
+++ b/parts/autoproject/kdevautoproject.rc
@@ -21,7 +21,7 @@
     <Action name="build_execute" />
   </Menu>
 </MenuBar>
-<ToolBar name="mainToolBar">
+<ToolBar name="buildToolBar">
     <Action name="build_build" group="build_operations" />
     <Action name="build_execute" group="build_operations" />
 </ToolBar>
