--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui version="11" name="gideon" >
+<kpartgui version="12" name="gideon" >
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
     <DefineGroup name="new_merge"/>
@@ -140,7 +140,7 @@
   <Action name="help_whats_this"/>
 </ToolBar>
 
-<ToolBar name="browserToolBar" position="Top" noMerge="1" fullWidth="false">
+<ToolBar name="browserToolBar" position="Top" noMerge="1">
   <text>Browser Toolbar</text>
   <DefineGroup name="class_operations" />
   <DefineGroup name="browser_operations" />
