--- a/parts/autoproject/kdevautoproject.rc
+++ b/parts/autoproject/kdevautoproject.rc
@@ -23,6 +23,7 @@
 </MenuBar>
 <ToolBar name="buildToolBar">
     <Action name="build_build" group="build_operations" />
+    <Action name="build_buildactivetarget" group="build_operations" />
     <Action name="build_execute" group="build_operations" />
 </ToolBar>
 </kpartgui>
