--- a/lib/widgets/Makefile.am
+++ b/lib/widgets/Makefile.am
@@ -4,4 +4,4 @@ METASOURCES = AUTO
 
 noinst_LTLIBRARIES = libwidgets.la
 
-libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp
+libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp ktabzoomframe.cpp ktabzoombarlayout.cpp ktabwidget.cpp flagboxes.cpp qcomboview.cpp klistviewaction.cpp kcomboview.cpp
