* Merged GUI for Update and Revert operations (Revert is an "enforce even if modified" update so we can provide only a checkbox in the Update dialog). * Because update to a release other than HEAD will set the sticky flag a new action for get ridding of it (performing "cvs update -A filelist") has been provided. * CvsPart will not bother anymore asking "do you want to add to repository?" messages with non CVS projects ;-). * A new preliminary GUI for display "cvs log" is committed: it is based on KDialogBase but it is still not functional regarding the displaying of diffs between revisions. * Some other minor bugfixes and clean-ups.

--- a/parts/cvsservice/kdevcvsservice.desktop
+++ b/parts/cvsservice/kdevcvsservice.desktop
@@ -3,10 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CVS Integration using Cervisia's cvsservice (needs KDE 3.2) http://www.kde.org/apps/cervisia/
-Comment[hu]=CVS-integráció a Cervisia cvsservice-én keresztül (KDE 3.2-től) http://www.kde.org/apps/cervisia/
-Comment[pt_BR]=Integração com o CVS usando o cvsservice do Cervisia (precisa do KDE 3.2) http://www.kde.org/apps/cervisia/
-Comment[sv]=Integrering av CVS med användning av Cervisias CVS-tjänst (kräver KDE 3.2) http://www.kde.org/apps/cervisia/
-Comment[xx]=xxCVS Integration using Cervisia's cvsservice (needs KDE 3.2) http://www.kde.org/apps/cervisia/xx
 Name=CvsService
 Name[sv]=CVS-tjänst
 Name[xx]=xxCvsServicexx
@@ -15,6 +11,7 @@ GenericName[hu]=CVS-integráció a Cervisia cvsservice-én keresztül
 GenericName[pt_BR]=Integração com o CVS usando o cvsservice do Cervisia
 GenericName[sv]=Integrering av CVS med användning av Cervisias CVS-tjänst
 GenericName[xx]=xxCVS Integration using Cervisia's cvsservicexx
+Icon=misc
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvsservice
 X-KDevelop-Scope=Global
