trying to make it compile to see of it than just the cool demo in the kdevelop presentation :)

--- a/configure.in.in
+++ b/configure.in.in
@@ -86,5 +86,5 @@ AC_CHECK_PROG(gmake_prog, gmake, gmake, make)
 AC_CHECK_PROGS(TAR, gnutar gtar tar, [AM_MISSING_PROG(tar)])
 AC_DEFINE_UNQUOTED(MAKE_COMMAND, "$gmake_prog", [GNU make command])
 
-
+CXXFLAGS="$CXXFLAGS $KDE_DEFAULT_CXXFLAGS"
 
